[gd_scene load_steps=14 format=2]

[ext_resource path="res://Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://true_control.gd" type="Script" id=2]
[ext_resource path="res://dropzone.tscn" type="PackedScene" id=3]
[ext_resource path="res://draganddroplabel.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.807843, 0.258824, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 43
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 26
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="DragAndDropDemo" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 200.0
margin_right = -220.0
margin_bottom = -24.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VLayout" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1493.0
margin_bottom = 849.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionHeader" type="HBoxContainer" parent="VLayout"]
margin_right = 1486.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SrcHeader" type="Panel" parent="VLayout/DescriptionHeader"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="SourceLabel" type="Label" parent="VLayout/DescriptionHeader/SrcHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Wegpunkt"
align = 1
valign = 1

[node name="HeaderDivider" type="Panel" parent="VLayout/DescriptionHeader"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="TargetLabel2" type="Label" parent="VLayout/DescriptionHeader/HeaderDivider"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 4 )
text = "Distanz"
align = 1
valign = 1

[node name="TargetHeader" type="Panel" parent="VLayout/DescriptionHeader"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="TargetLabel" type="Label" parent="VLayout/DescriptionHeader/TargetHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Vorgänger"
align = 1
valign = 1

[node name="DragAndDropColumns" type="HBoxContainer" parent="VLayout"]
margin_top = 54.0
margin_right = 1486.0
margin_bottom = 182.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="VLayout/DragAndDropColumns/SourceContainer"]
margin_left = 1500.0
margin_right = 1600.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Bestätigen"

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "A"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown" type="OptionButton" parent="VLayout/DragAndDropColumns/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone" parent="VLayout/DragAndDropColumns/TargetContainer" instance=ExtResource( 3 )]

[node name="DragAndDropColumns2" type="HBoxContainer" parent="VLayout"]
margin_top = 186.0
margin_right = 1486.0
margin_bottom = 314.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns2"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns2/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "B"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns2"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown2" type="OptionButton" parent="VLayout/DragAndDropColumns2/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns2"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone2" parent="VLayout/DragAndDropColumns2/TargetContainer" instance=ExtResource( 3 )]

[node name="DragAndDropColumns3" type="HBoxContainer" parent="VLayout"]
margin_top = 318.0
margin_right = 1486.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns3"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns3/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "C"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns3"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown3" type="OptionButton" parent="VLayout/DragAndDropColumns3/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns3"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone3" parent="VLayout/DragAndDropColumns3/TargetContainer" instance=ExtResource( 3 )]

[node name="DragAndDropColumns4" type="HBoxContainer" parent="VLayout"]
margin_top = 450.0
margin_right = 1486.0
margin_bottom = 578.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns4"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns4/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "D"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns4"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown4" type="OptionButton" parent="VLayout/DragAndDropColumns4/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns4"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone4" parent="VLayout/DragAndDropColumns4/TargetContainer" instance=ExtResource( 3 )]

[node name="DragAndDropColumns5" type="HBoxContainer" parent="VLayout"]
margin_top = 582.0
margin_right = 1486.0
margin_bottom = 710.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns5"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns5/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "E"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns5"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown5" type="OptionButton" parent="VLayout/DragAndDropColumns5/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns5"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone5" parent="VLayout/DragAndDropColumns5/TargetContainer" instance=ExtResource( 3 )]

[node name="DragAndDropColumns6" type="HBoxContainer" parent="VLayout"]
margin_top = 714.0
margin_right = 1486.0
margin_bottom = 842.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns6"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VLayout/DragAndDropColumns6/SourceContainer"]
margin_left = -3.0
margin_top = -2.0
margin_right = 251.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "F"
align = 1
valign = 1

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns6"]
margin_left = 254.0
margin_right = 1232.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDown6" type="OptionButton" parent="VLayout/DragAndDropColumns6/SrcTargetDivider"]
margin_right = 978.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
align = 1

[node name="TargetContainer" type="Panel" parent="VLayout/DragAndDropColumns6"]
margin_left = 1236.0
margin_right = 1486.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="dropzone6" parent="VLayout/DragAndDropColumns6/TargetContainer" instance=ExtResource( 3 )]

[node name="Node2D3" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 0, -150 )

[node name="Node2D4" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 500, -150 )

[node name="Label" parent="VLayout/Node2D4" index="0"]
text = "C"

[node name="Node2D5" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 399.624, -150 )

[node name="Label" parent="VLayout/Node2D5" index="0"]
text = "B"

[node name="Node2D6" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 300, -150 )

[node name="Label" parent="VLayout/Node2D6" index="0"]
text = "B"

[node name="Node2D7" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 200, -150 )

[node name="Node2D8" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 100, -150 )

[node name="Node2D9" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 600, -150 )

[node name="Label" parent="VLayout/Node2D9" index="0"]
text = "C"

[node name="Node2D10" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 700, -150 )

[node name="Label" parent="VLayout/Node2D10" index="0"]
text = "D"

[node name="Node2D11" parent="VLayout" instance=ExtResource( 5 )]
position = Vector2( 800, -150 )

[node name="Label" parent="VLayout/Node2D11" index="0"]
text = "E"

[connection signal="pressed" from="VLayout/DragAndDropColumns/SourceContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns/SrcTargetDivider/DropDown" to="." method="_on_DropDown_item_selected"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns2/SrcTargetDivider/DropDown2" to="." method="_on_DropDown2_item_selected"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns3/SrcTargetDivider/DropDown3" to="." method="_on_DropDown3_item_selected"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns4/SrcTargetDivider/DropDown4" to="." method="_on_DropDown4_item_selected"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns5/SrcTargetDivider/DropDown5" to="." method="_on_DropDown5_item_selected"]
[connection signal="item_selected" from="VLayout/DragAndDropColumns6/SrcTargetDivider/DropDown6" to="." method="_on_DropDown6_item_selected"]

[editable path="VLayout/Node2D3"]
[editable path="VLayout/Node2D4"]
[editable path="VLayout/Node2D5"]
[editable path="VLayout/Node2D6"]
[editable path="VLayout/Node2D7"]
[editable path="VLayout/Node2D8"]
[editable path="VLayout/Node2D9"]
[editable path="VLayout/Node2D10"]
[editable path="VLayout/Node2D11"]
